@@ -15,6 +15,8 @@ WebHelpers ChangeLog
 
 * webhelpers.html.tags:
 
+  - For new HTML 5 input fields, the ``text`` helper has a "type" argument.
+
   - Don't put an "id" attribute on a hidden fields generated by the ``form()``
     helper, including the magic ``_method`` field. The IDs will clash if there
     are multiple forms on the page.
